--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <div class="container-fluid d-flex">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="index.html"><span>DataBird</span></a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <h1 class="text-light"><a href="index.html"><span>DataBird</span>
+            <a href="index.html"><img src="assets/img/bird.png" alt="" class="img-fluid"></a>
+          </a></h1>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -119,10 +119,9 @@
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-code-block"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
-                occaecati cupiditate</p>
+              <div class="icon"><i class="bx bx-support"></i></div>
+              <h4 class="title"><a href="">Marketing Digital</a></h4>
+              <p class="description">marketing digital y posicionamiento en motores de búsqueda</p>
             </div>
           </div>
 
@@ -130,15 +129,14 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-html5"></i></div>
               <h4 class="title"><a href="">Páginas Web</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla</p>
+              <p class="description">Elaboramos páginas web hechas a la medida</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-bug"></i></div>
-              <h4 class="title"><a href="">Sin Bugs</a></h4>
+              <div class="icon"><i class="bx bx-data"></i></div>
+              <h4 class="title"><a href="">Desarrollo de sistemas</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
                 mollit anim</p>
             </div>
@@ -163,8 +161,8 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Portfolio</h2>
-          <p>Check out our beautifull portfolio</p>
+          <h2>Portafolio</h2>
+          <p>Algunos de nuestros trabajos</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -490,7 +488,6 @@
               </div>
             </div>
           </div>
-
         </div>
 
       </div>
@@ -501,8 +498,8 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Clients</h2>
-          <p>They trusted us</p>
+          <h2>Clientes</h2>
+          <p>Nuestros clientes</p>
         </div>
 
         <div class="owl-carousel clients-carousel" data-aos="fade-up" data-aos-delay="100">
@@ -624,10 +621,10 @@
           <div class="col-lg-3 col-md-6 footer-contact" data-aos="fade-up" data-aos-delay="100">
             <h3>DataBird</h3>
             <p>
-              Camino San Juán de Ixtacala 59<br>
+              <strong>Camino San Juán de Ixtacala 59</strong><br>
               CDMX, México<br>
               <strong>Teléfono:</strong> 58 83 68 30 10<br>
-              <br><br> <strong>Email:</strong> info@databird.com<br>
+              <strong>Email:</strong> info@databird.com<br>
             </p>
           </div>
 
@@ -671,14 +668,10 @@
 
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Ninestars</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>DataBird</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/ninestars-free-bootstrap-3-theme-for-creative/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="#">DataBird</a>
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -695,7 +688,6 @@
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
 
-  <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
