--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/bird.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -195,14 +195,14 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/gohemaLogo.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="https://gohema.mx/" data-gall="portfolioGallery" class="venobox"
                   title="Web 3"><i class="icofont-plus-circle"></i></a>
                 <a href="#" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>Web 3</h4>
+                <h4>Gohema</h4>
                 <p>Web</p>
               </div>
             </div>
