--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
+              <li data-filter=".filter-card">System</li>
               <li data-filter=".filter-web">Web</li>
             </ul>
           </div>
@@ -225,15 +225,15 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/gohemaLogo2.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Card 2"><i class="icofont-plus-circle"></i></a>
+                <a href="http://gohema.herokuapp.com/login" data-gall="portfolioGallery" class="venobox"
+                  title="System 2"><i class="icofont-plus-circle"></i></a>
                 <a href="#" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>System 2</h4>
+                <p>System</p>
               </div>
             </div>
           </div>
@@ -242,12 +242,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="https://whatevaaar.github.io/HAPublishing/index.html" data-gall="portfolioGallery" class="venobox"
                   title="Web 2"><i class="icofont-plus-circle"></i></a>
                 <a href="#" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>Web 2</h4>
+                <h4>H&A Publishing</h4>
                 <p>Web</p>
               </div>
             </div>
@@ -273,12 +273,12 @@
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Card 1"><i class="icofont-plus-circle"></i></a>
+                  title="System 1"><i class="icofont-plus-circle"></i></a>
                 <a href="#" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>System 1</h4>
+                <p>System</p>
               </div>
             </div>
           </div>
@@ -288,12 +288,12 @@
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox"
-                  title="Card 3"><i class="icofont-plus-circle"></i></a>
+                  title="System 3"><i class="icofont-plus-circle"></i></a>
                 <a href="#" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
+                <h4>System 3</h4>
+                <p>System</p>
               </div>
             </div>
           </div>
