--- a/index.html
+++ b/index.html
@@ -255,12 +255,12 @@
             <div class="portfolio-wrap">
               <img src="assets/img/korribanLogo.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="https://whatevaaar.github.io/Korriban/" data-gall="portfolioGallery" class="venobox"
+                <a href="https://whatevaaar.github.io/Korribann/" data-gall="portfolioGallery" class="venobox"
                   title="Web 3"><i class="icofont-plus-circle"></i></a>
                 <a href="#" title="More Details"><i class="icofont-link"></i></a>
               </div>
               <div class="portfolio-info">
-                <h4>Korriban</h4>
+                <h4>Korribann</h4>
                 <p>Web</p>
               </div>
             </div>
