--- a/index.html
+++ b/index.html
@@ -283,73 +283,77 @@
         <ul class="faq-list">
 
           <li data-aos="fade-up" data-aos-delay="100">
-            <a data-toggle="collapse" class="" href="#faq1">Non consectetur a erat nam at lectus urna duis? <i
+            <a data-toggle="collapse" class="" href="#faq1">¿Cuánto cuestan sus servicios? <i
                 class="icofont-simple-up"></i></a>
             <div id="faq1" class="collapse show" data-parent=".faq-list">
               <p>
-                Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur
-                gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                Depende de las necesidades de cada cliente. Después de habalar con usted sobre sus 
+                requerimientos, Data Bird elaborará una propuesta personalizada que cubra todas sus
+                necesidades y le brinde los servicios necesarios para que su negocio funcione sin problemas
+                siempre.
               </p>
             </div>
           </li>
 
           <li data-aos="fade-up" data-aos-delay="200">
-            <a data-toggle="collapse" href="#faq2" class="collapsed">Feugiat scelerisque varius morbi enim nunc faucibus
-              a pellentesque? <i class="icofont-simple-up"></i></a>
+            <a data-toggle="collapse" href="#faq2" class="collapsed">¿Proporcionan mantenimiento posterior al desarrollo? <i class="icofont-simple-up"></i></a>
             <div id="faq2" class="collapse" data-parent=".faq-list">
               <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit
-                ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                Si, damos manteniemiento a todo el software que diseñamos basados en una licencia de producto.
+                Esto generalmente incluye el seguimiento de errores y la reparación. Tambien realizamos mejoras a 
+                sistemas preexistentes y desarrollo de características nuevas.
               </p>
             </div>
           </li>
 
           <li data-aos="fade-up" data-aos-delay="300">
-            <a data-toggle="collapse" href="#faq3" class="collapsed">Dolor sit amet consectetur adipiscing elit
-              pellentesque habitant morbi? <i class="icofont-simple-up"></i></a>
+            <a data-toggle="collapse" href="#faq3" class="collapsed">¿Como manejan la correción de errores? <i class="icofont-simple-up"></i></a>
             <div id="faq3" class="collapse" data-parent=".faq-list">
               <p>
-                Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum
-                integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt.
-                Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                Hacemos todo lo posible para evitar errores de programación en los productos entregados, para ello realizamos
+                una gran cantidad de pruebas de software (control de calidad, pruebas de sistema, pruebas de funcionalidad y 
+                características, pruebas de integración, pruebas de regresión, pruebas de software web, pruebas de compatibilidad 
+                en varias plataformas, pruebas de carga y rendimiento, preparación de casos de prueba, ejecución de casos de prueba. , informes, etc.)
+                Sin embargo, todos los que están familiarizados con la práctica de desarrollo de software saben que periodicamente suelen aparecer errores 
+                incluso en los productos de la más alta calidad. Corregimos los errores lo antes posible, siempre teniendo una comunicación activa con usted
+                por medio de email, whatsapp o videollamda en caso de ser necesaria.
               </p>
             </div>
           </li>
 
           <li data-aos="fade-up" data-aos-delay="400">
-            <a data-toggle="collapse" href="#faq4" class="collapsed">Ac odio tempor orci dapibus. Aliquam eleifend mi in
-              nulla? <i class="icofont-simple-up"></i></a>
+            <a data-toggle="collapse" href="#faq4" class="collapsed">¿Cómo puedo saber si el proyecto final será lo que tengo en mente?
+              
+            <i class="icofont-simple-up"></i></a>
             <div id="faq4" class="collapse" data-parent=".faq-list">
               <p>
-                Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id
-                donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit
-                ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                Para la realización exitosa del proyecto, necesitamos una especificación detallada. Debe señalar todas sus preferencias 
+                con respecto al estilo, la gama de colores y las formas. También necesitamos conocer las especificaciones de su proyecto, 
+                la descripción de la aplicación para la que se desarrollará el diseño. Dentro de los primeros días se le entregará un prototipo
+                interactivo de demostración, para que pueda verificar que es exactamente lo que necesita y ha estado buscando.
               </p>
             </div>
           </li>
 
           <li data-aos="fade-up" data-aos-delay="500">
-            <a data-toggle="collapse" href="#faq5" class="collapsed">Tempus quam pellentesque nec nam aliquam sem et
-              tortor consequat? <i class="icofont-simple-up"></i></a>
+            <a data-toggle="collapse" href="#faq5" class="collapsed">¿Cómo puedo monitorear y verificar el progreso del desarrollo del proyecto? <i class="icofont-simple-up"></i></a>
             <div id="faq5" class="collapse" data-parent=".faq-list">
               <p>
-                Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc
-                vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus
-                gravida quis blandit turpis cursus in
+                Usted es parte fundamental del desarrollo. SCRUM es nuestra metodología de desarrollo ágil que tiene como premisa principal mostrarle a usted
+                avances constantes y de valor para que el desarrollo sea preciso, rápido y el producto final rebase sus expectativas, para ello le proporcionaremos
+                informes de estado peródicos basados en hojas de tiempo de nuestros desarrolladores, lo cual le permite tener una visibilidad del estado del proyecto
+                todo el tiempo. Puede hablar con el equipo de desarrolladores vía email, whatsapp o una conferencia por Zoom en caso de ser necesario.
               </p>
             </div>
           </li>
 
           <li data-aos="fade-up" data-aos-delay="600">
-            <a data-toggle="collapse" href="#faq6" class="collapsed">Tortor vitae purus faucibus ornare. Varius vel
-              pharetra vel turpis nunc eget lorem dolor? <i class="icofont-simple-up"></i></a>
+            <a data-toggle="collapse" href="#faq6" class="collapsed">¿Qué pasa si mi pregunta no se responde en esta página?
+              <i class="icofont-simple-up"></i></a>
             <div id="faq6" class="collapse" data-parent=".faq-list">
               <p>
-                Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada
-                nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis
-                tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas
-                fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+                Envíenos un correo electrónico a <a href = "mailto: sales@databird.com"> sales@databird.com</a>Nuestro equipo resolverá cualquier duda o comentario
+                que tenga.
               </p>
             </div>
           </li>
