--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li><a href="#portfolio">Portafolio</a></li>
                 <li><a href="#team">Equipo</a></li>
                 <li><a href="#contact">Contáctanos</a></li>
-                <li class="get-started"><a href="#about">¡Llama!</a></li>
+                <li class="get-started"><a href="https://wa.me/5215620065900?text=Hola%20estoy%20interesado%20en%20DataBird">¡Mándanos un whatsapp!</a></li>
             </ul>
         </nav><!-- .nav-menu -->
 
@@ -87,17 +87,20 @@
                 </div>
                 <div class="col-lg-6 pt-5 pt-lg-0">
                     <h3 data-aos="fade-up">¿Quiénes somos?</h3>
-                    <p data-aos="fade-up" data-aos-delay="100">DataBird es una consultoría</p>
+                    <p data-aos="fade-up" data-aos-delay="100">DataBird es una consultoría enfocada al desarrollo profesional de soluciones hechas a la medida. En otras palbras,
+                    hacemos software que responde justo a tus neceisdades.</p>
                     <div class="row">
                         <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
                             <i class="bx bx-receipt"></i>
                             <h4>SCRUM</h4>
-                            <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                            <p>Aquí en DataBird somos grandes fans de que el cliente esté involucrado con nosotros para que estén siempre seguros de que el producto que van a
+                            recibir es lo que quieren y que lo van a tener a tiempo, por eso la empleamos metodología SCRUM para todos nuestros proyectos.</p>
                         </div>
                         <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
                             <i class="bx bx-cube-alt"></i>
                             <h4>Hecho a la medida</h4>
-                            <p>Nuestro software es hecho a tu medida, ajustado exactamente a tus necesidades</p>
+                            <p>Nuestro software es hecho a tu medida, ajustado exactamente a tus necesidades. Olvidate de todo ese software genérico que no responde
+                            a tus necesidades.</p>
                         </div>
                     </div>
                 </div>
@@ -128,7 +131,8 @@
                     <div class="icon-box">
                         <div class="icon"><i class="bx bxl-html5"></i></div>
                         <h4 class="title"><a href="">Páginas Web</a></h4>
-                        <p class="description">Nuestras páginas web están hechas a la medida, con un diseño impecable y moderno</p>
+                        <p class="description">Nuestras páginas web están hechas a la medida, con un diseño impecable y moderno. También son responsivas,
+                        lo que significa que se verán bien independiente del dispositivo donde las veas.</p>
                     </div>
                 </div>
 
@@ -144,7 +148,7 @@
                     <div class="icon-box">
                         <div class="icon"><i class="bx bxl-android"></i></div>
                         <h4 class="title"><a href="">Apps</a></h4>
-                        <p class="description">Desarrollo de apps para los sistemas operativos Android y iOS con compatibilidad extendida a los dispositivos</p>
+                        <p class="description">Desarrollamos de apps para los sistemas operativos Android y iOS con compatibilidad extendida a los dispositivos</p>
                     </div>
                 </div>
 
@@ -180,7 +184,7 @@
                         <img src="assets/img/ecLogo.png" class="img-fluid" alt="">
                         <div class="portfolio-links">
                             <a href="https://entrecanos.com/" data-gall="portfolioGallery" class="venobox"
-                               title="App 1"><i class="icofont-plus-circle"></i></a>
+                               title="Web 1"><i class="icofont-plus-circle"></i></a>
                             <a href="https://entrecanos.com/" title="More Details"><i class="icofont-link"></i></a>
                         </div>
                         <div class="portfolio-info">
@@ -210,7 +214,7 @@
                         <img src="assets/img/cahumLogo.png" class="img-fluid" alt="">
                         <div class="portfolio-links">
                             <a href="https://cahum.com.mx/" data-gall="portfolioGallery" class="venobox"
-                               title="App 2"><i class="icofont-plus-circle"></i></a>
+                               title="Web 2"><i class="icofont-plus-circle"></i></a>
                             <a href="https://cahum.com.mx/" title="More Details"><i class="icofont-link"></i></a>
                         </div>
                         <div class="portfolio-info">
@@ -229,7 +233,7 @@
                             <a href="http://gohema.herokuapp.com/login" title="More Details"><i class="icofont-link"></i></a>
                         </div>
                         <div class="portfolio-info">
-                            <h4>System 2</h4>
+                            <h4>Sistema de Gohema</h4>
                             <p>System</p>
                         </div>
                     </div>
@@ -351,7 +355,7 @@
                         <i class="icofont-simple-up"></i></a>
                     <div id="faq6" class="collapse" data-parent=".faq-list">
                         <p>
-                            Envíenos un correo electrónico a <a href = "mailto: sales@databird.com"> sales@databird.com</a>Nuestro equipo resolverá cualquier duda o comentario
+                            Envíenos un correo electrónico a <a href = "mailto: info@databird.com"> info@databird.com</a>Nuestro equipo resolverá cualquier duda o comentario
                             que tenga.
                         </p>
                     </div>
@@ -410,7 +414,7 @@
                         <div class="phone">
                             <i class="icofont-phone"></i>
                             <h4>Llama al:</h4>
-                            <p>55 83 68 30 10</p>
+                            <p>56 20 06 59 00</p>
                         </div>
                         <iframe width="100%" height="290"
                                 src="https://maps.google.com/maps?width=100%&amp;height=290&amp;hl=en&amp;q=Camino%20San%20Ju%C3%A1n%20de%20Ixtacala%2059+(DataBird)&amp;ie=UTF8&amp;t=&amp;z=14&amp;iwloc=B&amp;output=embed"
@@ -489,7 +493,7 @@
                     <p>
                         <strong>Camino San Juán de Ixtacala 59</strong><br>
                         CDMX, México<br>
-                        <strong>Teléfono:</strong> 58 83 68 30 10<br>
+                        <strong>Teléfono:</strong> 56 20 06 59 00<br>
                         <strong>Email:</strong> info@databird.com<br>
                     </p>
                 </div>
